--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ twitter4j.properties
 .idea/vcs.xml
 out/production/WataProject/Main.class
 TwitterSearchEngine.class
+out/production/WataProject/DictionnaryParser.class
+out/production/WataProject/SentimentAnalyser.class
