--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ out/production/WataProject/Main.class
 TwitterSearchEngine.class
 out/production/WataProject/DictionnaryParser.class
 out/production/WataProject/SentimentAnalyser.class
+uiDesigner.xml
+DictionaryParser.class
+training.1600000.processed.noemoticon.csv
