ignore training set

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ out/production/WataProject/SentimentAnalyser.class
 uiDesigner.xml
 DictionaryParser.class
 training.1600000.processed.noemoticon.csv
+Project Description.pdf
+training_data_file.csv
